# kiri

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.claude/rules/: git-worktree.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
crates/kiri-cli/: Cargo.toml
crates/kiri-cli-proto/: Cargo.toml
crates/kiri-cli-proto/src/: lib.rs  types.rs  wire.rs
crates/kiri-cli/src/: cli.rs  main.rs  render.rs  transport.rs
docs/: README.md  external-terminals.md  multi-window.md  platform-support.md
docs/contributing/: README.md  labels.md  testing.md
docs/features/: 20250114-xterm-claude-code-compatibility.md  20260110-basic-window-structure.md  20260110-editor.md  20260110-file-tree.md  20260110-git-diff.md  20260110-mode-switching.md  20260110-multiple-tabs.md  20260110-multiple-windows.md  20260110-search.md  20260110-terminal.md  20260513-terminal-pane-name-color-plan.md  20260513-terminal-pane-name-color.md  20260612-kiri-cli-window-and-pane-control.md
docs/maintainers/: release.md
docs/plans/: 2026-02-13-open-recent-menu-design.md  2026-02-26-drag-drop-subdirectory-design.md  2026-02-26-internal-drag-drop-design.md  2026-02-26-internal-drag-drop-plan.md  2026-02-27-compose-fixed-ports-design.md  2026-02-27-remote-access-design.md  2026-02-27-remote-access-plan.md  2026-02-27-startup-command-plan.md  2026-02-28-remote-access-v2-design.md  2026-02-28-remote-access-v2-plan.md  README.md
docs/superpowers/plans/: 2026-03-26-dynamic-quick-reply.md  2026-03-26-terminal-shortcut-bar.md  2026-03-27-shortcut-suggestions.md  2026-03-29-pr-worktree-integration.md  2026-04-27-terminal-worktree-tag.md  2026-05-13-terminal-panel-minimize.md
docs/superpowers/specs/: 2026-03-26-dynamic-quick-reply-design.md  2026-03-26-terminal-shortcut-bar-design.md  2026-03-27-shortcut-suggestions-design.md  2026-03-29-pr-worktree-integration-design.md  2026-04-27-terminal-worktree-tag-design.md  2026-05-13-terminal-panel-minimize-design.md
perf-baselines/: baselines.json
resources/skills/kiri-cli/: SKILL.md
scripts/: demo-file-links.sh  install-local-app.ts  perf-bundle-report.ts  perf-check.ts  perf-measure.ts  release.ts
src/: App.svelte  app.css  main.ts  test-format.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: README.md  default.json  mcp-bridge.json  notifications.json
src-tauri/icons/: icon.icns
src-tauri/remote-ui/: app.js  index.html  manifest.json  style.css  sw.js
src-tauri/src/: lib.rs
src-tauri/src/commands/: cli_install.rs  cli_install_paths.rs  cli_server.rs  cloudflare_tunnel.rs  compose_isolation.rs  compose_isolation_commands.rs  drag_drop.rs  error.rs  file.rs  file_io.rs  fs.rs  fs_gitignore.rs  fs_io.rs  git.rs  git_diff.rs  git_history.rs  git_history_commands.rs  git_status_map.rs  git_worktree.rs  git_worktree_commands.rs  github_pr.rs  github_pr_commands.rs  lock_ext.rs  menu.rs  mod.rs  performance.rs  performance_commands.rs  port_isolation.rs  port_isolation_commands.rs  remote_access.rs  remote_access_commands.rs  search.rs  skill_install.rs  suggest.rs  suggest_io.rs  terminal.rs  terminal_commands.rs  watcher.rs  watcher_commands.rs  window.rs
src-tauri/src/commands/cli_server/: dispatch.rs  frontend_bridge.rs  handlers.rs  pane_map.rs  ring_buffer.rs  run_logic.rs  signals.rs
src-tauri/tests/: edge_cases.rs  fs_symlink_integration.rs  git_parallel.rs  remote_access_test.rs  terminal_integration.rs  watcher_integration.rs  window_registry_concurrency.rs
src/lib/components/: index.ts
src/lib/services/: cliBridge.test.ts  cliBridge.ts  composeIsolationService.test.ts  composeIsolationService.ts  dialogService.ts  dragDropService.ts  eventService.test.ts  eventService.ts  filePathLinkProvider.test.ts  filePathLinkProvider.ts  fileService.ts  gitService.test.ts  gitService.ts  inputStatsService.test.ts  inputStatsService.ts  notificationService.test.ts  notificationService.ts  openerService.test.ts  openerService.ts  paneSnapshot.test.ts  paneSnapshot.ts  performanceService.test.ts  performanceService.ts  persistenceService.inputStats.test.ts  persistenceService.remote.test.ts  persistenceService.shortcuts.test.ts  persistenceService.test.ts  persistenceService.ts  portIsolationService.test.ts  portIsolationService.ts  prService.test.ts  prService.ts  remoteAccessService.ts  (+12 more)
src/test/: browser-setup.ts  setup.ts
(+181 files in other folders)
