[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
dirs = "5.0"
portable-pty = "0.8"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
git2 = "0.18"
tauri-plugin-mcp-bridge = "0.7"
notify = "6.1"
notify-debouncer-mini = "0.4"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.24.0"
