[package]
name = "kiri"
version = "0.0.1"
description = "A lightweight file manager and terminal application"
authors = ["t09tanaka"]
license = "MIT"
repository = "https://github.com/t09tanaka/kiri"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
dirs = "5.0"
portable-pty = "0.8"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time", "net"] }
git2 = "0.18"
base64 = "0.22"
tauri-plugin-mcp-bridge = "0.7"
notify = "6.1"
notify-debouncer-mini = "0.4"
urlencoding = "2.1"
tauri-plugin-notification = "2.3.3"
sysinfo = "0.31"
lazy_static = "1.5"
glob = "0.3"
regex = "1.10"
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
subtle = "2"
local-ip-address = "0.6"

[dev-dependencies]
tempfile = "3.24.0"
reqwest = { version = "0.12", features = ["json"] }
