[package]
name = "kiri-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line client for the kiri terminal"

[[bin]]
name = "kiri-cli"
path = "src/main.rs"

[dependencies]
kiri-cli-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
interprocess = { version = "2", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
